--- a/index.html
+++ b/index.html
@@ -1,1 +1,122 @@
-Some text
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vladimir betancourt CV</title>
+    <link rel="stylesheet" href="styles.css" />
+    <meta name="robots" content="noindex, nofollow"/>
+  </head>
+
+  <body class="body">
+      <nav class="nav">
+        <a href="#Contacts">Contacts</a>
+        <a href="#About_myself">About</a>
+        <a href="#Skills">Skills</a>
+        <a href="#Code">Code</a>
+        <a href="#Experience">Experience</a>
+        <a href="#Education">Education</a>
+        <a href="#Languages">Languages</a>
+        <a href="#Project">Project</a>
+      </nav>
+    <header>
+        <div class="info"></div>
+        <img src="Pictures/Foto.jpg" alt="My photo" class="foto"/>
+    </header>
+    
+    <main>
+        <h1>Владимир Бетанкурт</h1>
+        <h2 class="h2" id="Contacts">Contacts:</h2>
+            <div>
+                <ul>
+                    <li>Email: Betancourt.vladimir@gmail.com</li>
+                    <li>Telegram: @Betancourt_V</li>
+                    <li>Discord: bet#6287</li>
+                </ul>
+            </div>
+        <h2 class="h2" id="About_myself">About myself:</h2>
+
+        <div> 
+            <p class="text">I have worked as a Spanish translator for over 15 years in various
+              companies, mainly in the oil and gas industry. Now I want to try
+              myself in a new field</p> 
+        </div>
+        
+        <h2 class="h2" id="Skills">Skills:</h2>  
+        <div>
+            <ul>  
+                <li>Windows OS</li>    
+                <li>HTML</li>    
+                <li>CSS</li>    
+            </ul>   
+        </div>
+
+        <h2 class="h2" id="Code">Code example:</h2>
+        <pre class="code"><code>  
+            a=1; 
+            b=2; 
+            c=a+b;
+        </code></pre>
+
+        <h2 class="h2" id="Experience">Work experience:</h2>
+        <div> 
+            <table class="table">
+                <tr>
+                    <th class="th">Company</th>
+                    <th class="th">Position</th>
+                    <th class="th">Years</th>
+                </tr>
+                <tr>
+                    <td>Belarusneft</td>
+                    <td>Translator</td>
+                    <td>2008-2013</td>
+                </tr>
+                <tr>
+                    <td>Gas-Institute</td>
+                    <td>Translator</td>
+                    <td>2014-2014</td>
+                </tr>
+                <tr>
+                    <td>Rosneft</td>
+                    <td>Translator</td>
+                    <td>2015-2021</td>
+                </tr>
+            </table> 
+        </div>
+
+        <h2 class="h2" id="Education">Education:</h2>
+        <div> 
+            <p class="text">2003 - graduated from Minsk State Linguistic University</p> 
+        </div>
+
+        <h2 class="h2" id="Languages">Languages:</h2>
+        <div>
+            <ul>  
+                <li>Russian - native</li>    
+                <li>Spanish - native</li>    
+                <li>English - A2</li>    
+            </ul>
+        </div> 
+
+        <h2 class="h2" id="Project">Project:</h2>
+
+        <div> 
+            <a href="https://github.com/VladBet" target="_blank"><p class="text">Добавить ссылку</p></a>
+        </div>
+
+    </main>
+
+    <footer class="footer">
+        <span class="rsschool">
+            <a href="https://rs.school/js/" target="_blank">
+            <img src="https://rs.school/images/rs_school_js.svg" width="50" height="40" alt="RSSchool"></a>
+        </span>
+        <span class="year">2022</span>
+        <span class="github">
+            <a href="https://github.com/VladBet" target="_blank">
+            <img src="Pictures/GitHubicon.png" width="30" height="30" alt="Github"></a>
+        </span>     
+    </footer>
+  </body>
+</html>
