--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </nav>
     <header>
         <div class="info"></div>
-        <img src="Pictures/Foto.jpg" alt="My photo" class="foto"/>
+        <img src="Foto.jpg" alt="My photo" class="foto"/>
     </header>
     
     <main>
@@ -115,7 +115,7 @@
         <span class="year">2022</span>
         <span class="github">
             <a href="https://github.com/VladBet" target="_blank">
-            <img src="Pictures/GitHubicon.png" width="30" height="30" alt="Github"></a>
+            <img src="GitHubicon.png" width="30" height="30" alt="Github"></a>
         </span>     
     </footer>
   </body>
